Bug 161708 - Content control: color is lost when exporting to PDF forms
Summary: Content control: color is lost when exporting to PDF forms
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords:
Depends on:
Blocks: PDF-Export DOCX-Content_Control
  Show dependency treegraph
 
Reported: 2024-06-20 08:39 UTC by Miklos Vajna
Modified: 2024-06-30 14:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (11.98 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-20 08:39 UTC, Miklos Vajna
Details
Related problem: text is completely missing for a dropdown (11.96 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-27 13:13 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-06-20 08:39:10 UTC
Created attachment 194847 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached document

2) Notice that "date" is orange

3) Export to PDF (with forms enabled, which is the default)

Expected result: "date" is orange in the PDF

Actual result: "date" is black in the PDF
Comment 1 Commit Notification 2024-06-21 08:23:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0f165b7f2f03d806eb14ba7529223d31e30674a8

tdf#161708 sw content controls: handle font color when exporting to PDF form

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-06-21 11:39:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/38e3a4da66e0c3eaa5fd2e593131aa92a05548c3

tdf#161708 sw content controls: handle font color when exporting to PDF form

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Miklos Vajna 2024-06-27 13:13:34 UTC
Created attachment 195005 [details]
Related problem: text is completely missing for a dropdown

This is a similar "pdf export with forms corrupts" text, but here the text is completely missing in the PDF export result, unless the forms setting is off.
Comment 4 Commit Notification 2024-06-27 14:38:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/04013dbc77095eb140743e82c4f0e3fae83a02cb

tdf#161708 sw content controls: handle font color when exporting to PDF form

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-06-28 07:41:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b3e01bd3bdd37961057026ab7f2b57cbfab35d4a

Related: tdf#161708 sw content controls: fix custom default of dropdown to PDF

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-28 10:05:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c4b7722ee865f63566599b63d0bd3a484f6408e3

Related: tdf#161708 sw content controls: fix custom default of dropdown to PDF

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2024-06-29 05:24:09 UTC
Black in PDF in
Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Orange in PDF in
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 93987194f5dee2b917e32c18b8a377be95f0ab71
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Just a note:
I also notice the font generated is different in 25.2.
Look at the "a" letter in orange, and at a "a" letter from the black letter.
Comment 8 Commit Notification 2024-06-30 14:57:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/45f75991ff89967a0edbf9e9808835b83108de1b

Related: tdf#161708 sw content controls: fix custom default of dropdown to PDF

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.