tdf#161708 sw content controls: handle font color when exporting to PDF form

Export the bugdoc to PDF, the orange "date" lost its font color.

This went wrong in commit 82d90529dc2b3cb8359dec78852cbd910a66d275 (sw
content controls, rich text: add initial PDF export, 2022-09-12), we
export the content control as a PDF form widget by default since then.
Various properties like checkbox status and dropdown items were handled
already, but not text color.

Fix the problem by mapping the SwFont color to the widget descriptor
color, this fixes the color of the already filled in content of the
widget.

Note that given this is a property of the form widget, the color is
correctly applied also to strings filled in via PDF readers, interacting
with the form.

(cherry picked from commit 0f165b7f2f03d806eb14ba7529223d31e30674a8)

Conflicts:
	external/pdfium/UnpackedTarball_pdfium.mk

Change-Id: Id3e8611e415c0d571afe1cd14561c97b8a910ce9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169459
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>