include/vcl/filter/PDFiumLibrary.hxx
@@ -110,6 +110,7 @@ public:
     virtual std::vector<basegfx::B2DPoint> getLineGeometry() = 0;
     virtual PDFFormFieldType getFormFieldType(PDFiumDocument* pDoc) = 0;
     virtual float getFontSize(PDFiumDocument* pDoc) = 0;
+    virtual Color getFontColor(PDFiumDocument* pDoc) = 0;
     virtual OUString getFormFieldAlternateName(PDFiumDocument* pDoc) = 0;
     virtual int getFormFieldFlags(PDFiumDocument* pDoc) = 0;
     virtual OUString getFormAdditionalActionJavaScript(PDFiumDocument* pDoc,
